<resources>
    <string name="app_name">SteamApp</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="sign_in_fragment_label">Sign In</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="profile_fragment_label">Profile Fragment</string>
    <string name="explore_fragment_label">Explore Fragment</string>
    <string name="compare_fragment_label">Compare Fragment</string>
    <string name="search_fragment_label">Search Fragment</string>
    <string name="results_fragment_label">Results Fragment</string>
    <string name="game_details_fragment_label">Game Details Fragment</string>


    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_sign_in_fragment">Hello sign in fragment</string>
    <string name="hello_register_fragment">Hello register fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <string name="hello_explore_fragment">Hello explore fragment</string>
    <string name="hello_compare_fragment">Hello compare fragment</string>
    <string name="hello_search_fragment">Hello search fragment</string>
    <string name="hello_results_fragment">Hello results fragment</string>
    <string name="hello_game_details_fragment">Hello game details fragment</string>

    <string name="no_image">No Image</string>

    <string name="search">Search</string>
    <string name="search_hint">Search Games</string>

    <string name="action_item1">Watch Trailer</string>
    <string name="action_item2">Add to Wishlist</string>
    <string name="action_item3">Add to Compare</string>
    <string name="action_item4">Save List</string>



</resources>