<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.steamapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.steamapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/SignInFragment"
        android:name="com.example.steamapp.SignInFragment"
        android:label="@string/sign_in_fragment_label"
        tools:layout="@layout/fragment_sign_in">

        <action
            android:id="@+id/action_SignInFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.example.steamapp.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_RegisterFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/ProfileFragment"
        android:name="com.example.steamapp.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile">
    </fragment>

    <fragment
        android:id="@+id/ExploreFragment"
        android:name="com.example.steamapp.ExploreFragment"
        android:label="@string/explore_fragment_label"
        tools:layout="@layout/fragment_explore">
    </fragment>

    <fragment
        android:id="@+id/CompareFragment"
        android:name="com.example.steamapp.CompareFragment"
        android:label="@string/compare_fragment_label"
        tools:layout="@layout/fragment_compare">
    </fragment>

    <fragment
        android:id="@+id/SearchFragment"
        android:name="com.example.steamapp.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search">
    </fragment>

    <fragment
        android:id="@+id/ResultsFragment"
        android:name="com.example.steamapp.ResultsFragment"
        android:label="@string/results_fragment_label"
        tools:layout="@layout/fragment_results">
    </fragment>

    <fragment
        android:id="@+id/GameDetailsFragment"
        android:name="com.example.steamapp.GameDetailsFragment"
        android:label="@string/game_details_fragment_label"
        tools:layout="@layout/fragment_game_details">
    </fragment>
</navigation>